# EXRuster

./: .gitignore  CLAUDE.md  CODE_OPTIMIZATION_REPORT.md  Cargo.toml  Export.md  GEMINI.md  GPU.md  GPU_PERFORMANCE_OPTIMIZATION_PLAN.md  OPTIMIZATION_INSTRUCTIONS.md  OPTIMIZATION_REPORT.md  PLAN_CODE_DEDUPLICATION.md  RAPORT_AI.md  RAPORT_EXRuster.md  RAPORT_OPTYMALIZACJI.md  RAPORT_REFAKTORYZACJI.md  RAPORT_UI.md  README.md  UI.md  analiza_optymalizacji.md  build.py  build.rs  channel_groups.json  claude.md  code_optimization_report.md  detailed_implementation_plan.md  export.md  gamma.md  list.md  news.md  optimization_report.md  patchGPU.md  plan_gpu.md  poprawki.md  poprawki_faza2_plan.md  psd.md  raport.md  raport_load.md  raport_wydajnosci.md  refactor.md  reportGPU.md  (+5 more)
.cargo/: config.toml
.claude/: settings.local.json
__doc/: FONTS.MD  ICON.MD  RAPORT_EXRuster.md  TODO.md  export.md  kolors.md  list.md  log.md  mini.md  panel.md  shortcuts.md  slint.md  update.md  window.md
resources/img/: Exr-file-logo.ai  Exr-file-logo_v2.ai
src/: buffer_pool.rs  color_processing.rs  cuda_context.rs  cuda_kernels.rs  cuda_processing.rs  cuda_thumbnails.rs  exr_layers.rs  exr_metadata.rs  file_operations.rs  full_exr_cache.rs  gpu_batch.rs  gpu_context.rs  gpu_context_backup.rs  gpu_metrics.rs  gpu_mip.rs  gpu_processing.rs  gpu_scheduler.rs  gpu_thumbnails.rs  gpu_types.rs  histogram.rs  image_cache.rs  image_processing.rs  lazy_exr_loader.rs  main.rs  progress.rs  psd_writer.rs  simd_processing.rs  thumbnails.rs  tone_mapping.rs  ui_handlers.rs  utils.rs
src/io/: exr_metadata.rs  fast_exr_metadata.rs  file_operations.rs  full_exr_cache.rs  image_cache.rs  lazy_exr_loader.rs  metadata_traits.rs  mod.rs  thumbnails.rs
src/platform/: mod.rs  platform_win.rs
src/processing/: channel_classification.rs  color_processing.rs  histogram.rs  image_processing.rs  layer_export.rs  mod.rs  pipeline.rs  simd_processing.rs  simd_traits.rs  tone_mapping.rs
src/shaders/: blur.wgsl  histogram.wgsl  image_processing.wgsl  mip_generation.wgsl  sharpen.wgsl  thumbnail.wgsl
src/ui/: export_handlers.rs  file_handlers.rs  image_controls.rs  layers.rs  mod.rs  progress.rs  setup.rs  state.rs  thumbnails.rs  ui_handlers.rs
src/utils/: buffer_pool.rs  cache.rs  channel_config.rs  conversions.rs  error_handling.rs  logging.rs  mod.rs  progress.rs  utils.rs
stable/src/: color_processing.rs  file_operations.rs  main.rs  utils.rs
stable/ui/: DraggableWindow.slint  appwindow.slint  colors.slint
stable/ui/components/: PrzyciskAkcji.slint
ui/: ParameterSlider.slint  appwindow.slint  colors.slint  console_window.slint  meta_window.slint  simple_window.slint
ui/components/: HistogramWindow.slint  PozycjaMenu.slint  PrzyciskAkcji.slint
