[package]
name = "EXRuster"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "EXRuster"
path = "src/main.rs"

[dependencies]
slint = "1.12.1"
exr = "1.73.0"
rfd = { version = "0.15", features = ["file-handle-inner"] }
anyhow = "1.0"
rayon = "1.7"           # Przetwarzanie równoległe
num_cpus = "1.17"       # Wykrywanie liczby rdzeni

[build-dependencies]
slint-build = "1.12.1"

[profile.release]
lto = true              # Link Time Optimization
codegen-units = 1       # Lepsza optymalizacja kosztem czasu kompilacji
panic = "abort"         # Mniejszy binary size
opt-level = 3           # Maksymalne optymalizacje
overflow-checks = false # Wyłącz sprawdzanie overflow w release